Initial commit after setup

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "pathval": "^1.1.1",
     "path-is-absolute": "^1.0.1",
     "picomatch": "^2.3.0",
+    "prompt-sync": "^4.1.5",
     "randombytes": "^2.1.0",
     "readdirp": "^3.6.0",
     "require-directory": "^2.1.1",
